<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_options"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context=".OptionsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="11dp"
            android:layout_marginStart="11dp">

            <Switch
                android:text="@string/sounds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="21dp"
                android:paddingLeft="30dp"
                android:id="@+id/swSound"
                android:maxLines="1"
                android:textSize="24sp"
                android:textStyle="normal|bold"
                android:textColor="@color/colorPrimaryDark"

                android:checked="true" />

            <Switch
                android:text="@string/question_20"
                android:paddingLeft="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:maxLines="1"
                android:id="@+id/swGameType"
                android:textSize="24sp"
                android:textStyle="normal|bold"
                android:textColor="@color/colorPrimaryDark" />

            <Switch
                android:text="@string/throw_record"
                android:paddingLeft="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:id="@+id/swRecord"
                android:maxLines="1"
                android:textSize="24sp"
                android:textStyle="normal|bold"
                android:textColor="@color/colorPrimaryDark" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/text_size"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvTextSize"
                    android:maxLines="1"
                    android:layout_weight="1"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24sp"
                    android:textStyle="normal|bold" />

                <SeekBar
                    style="@android:style/Widget.SeekBar"
                    android:layout_marginTop="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/pbTextSize"
                    android:layout_weight="1"
                    android:progress="8"
                    android:visibility="visible"
                    tools:visibility="visible"
                    android:indeterminate="false" />

            </LinearLayout>

            <Button
                android:text="@string/save_exit"
                android:maxLines="1"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="75sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnSaveExit" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
