<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.thatmore.MainActivity"
    android:background="@drawable/background">

    <Button
        android:text="@string/new_game"
        android:textColor="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/newGame"
        style="@android:style/Widget.Holo.Light.Button.Borderless.Small"
        android:textSize="30sp"
        android:textStyle="normal|bold"
        android:layout_above="@+id/btnOption"
        android:layout_alignLeft="@+id/btnOption"
        android:layout_alignStart="@+id/btnOption"
        android:layout_marginBottom="39dp" />

    <Button
        android:text="@string/options"
        android:textColor="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnOption"
        style="@android:style/Widget.Holo.Light.Button.Borderless.Small"
        android:textSize="30sp"
        android:textStyle="normal|bold"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/exit_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/exit"
        android:textColor="@color/colorPrimaryDark"
        style="@android:style/Widget.Holo.Button.Borderless.Small"
        android:textSize="30sp"
        android:textStyle="normal|bold"
        android:layout_alignTop="@+id/btnOption"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="89dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/tvRecord"
        android:textStyle="normal|bold"
        android:textColor="@color/colorAccent" />

</RelativeLayout>
